--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <h3>Explore as Maravilhosas Praias</h3>
      <p>Visite as praias de Fernando de Noronha e mergulhe nas águas azul-turquesa.</p>
 
-     <h2>Reserve sua Viagem</h2>
+     <a href="./pag.html"> <h2>Reserve sua Viagem</h2> </a>
      <p>© 2023 Fernando de Noronha Turismo</p>
     
   </body>
